WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276811
[WebGPU]
https://skal65535.github.io/curl/index.html?funky
does not render geometry
https://bugs.webkit.org/show_bug.cgi?id=276811
Summary
[WebGPU] https://skal65535.github.io/curl/index.html?funky does not render ge...
Mike Wyrzykowski
Reported
2024-07-18 23:28:51 PDT
[WebGPU]
https://skal65535.github.io/curl/index.html?funky
does not render geometry
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-07-18 23:29:50 PDT
<
rdar://problem/132067460
>
Mike Wyrzykowski
Comment 2
2024-07-18 23:59:26 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30992
EWS
Comment 3
2024-07-22 09:28:53 PDT
Committed
281194@main
(7074f31df617): <
https://commits.webkit.org/281194@main
> Reviewed commits have been landed. Closing PR #30992 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug