[WebGPU] https://skal65535.github.io/curl/index.html?funky does not render geometry https://bugs.webkit.org/show_bug.cgi?id=276811 <rdar://problem/132067460>

Reviewed by Tadeu Zagallo.

Fix off by one with line strip geometry and draw calls with zero
per-vertex data.

* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::clampIndexBufferToValidValues):
(WebGPU::RenderPassEncoder::clampIndirectIndexBufferToValidValues):

Canonical link: https://commits.webkit.org/281194@main